basics working for ui
