# swagger/kayak/v1/raft.openapi.yaml
@@ -48,6 +48,34 @@ components:
           format: int64
       title: ExtendLease
       additionalProperties: false
+    kayak.v1.Group:
+      type: object
+      properties:
+        name:
+          type: string
+          title: name
+        partitionPositions:
+          type: object
+          title: partition_positions
+          additionalProperties:
+            type: string
+            title: value
+      title: Group
+      additionalProperties: false
+    kayak.v1.Group.PartitionPositionsEntry:
+      type: object
+      properties:
+        key:
+          type:
+            - integer
+            - string
+          title: key
+          format: int64
+        value:
+          type: string
+          title: value
+      title: PartitionPositionsEntry
+      additionalProperties: false
     kayak.v1.PutRecords:
       type: object
       properties:
@@ -185,7 +213,27 @@ components:
             - string
           title: ttl
           format: int64
+        stats:
+          title: stats
+          nullable: true
+          $ref: '#/components/schemas/kayak.v1.StreamStats'
       title: Stream
+      additionalProperties: false
+    kayak.v1.StreamStats:
+      type: object
+      properties:
+        recordCount:
+          type:
+            - integer
+            - string
+          title: record_count
+          format: int64
+        groups:
+          type: array
+          items:
+            $ref: '#/components/schemas/kayak.v1.Group'
+          title: groups
+      title: StreamStats
       additionalProperties: false
     kayak.v1.Worker:
       type: object
